--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,11 @@
 .Card {
+    border-radius: 10px;
     position: absolute;
     left: 0;
     right: 0;
     margin: auto;
+    filter: invert(1);
+    opacity: 0.95;
+    box-shadow: 1px 1px 1px 1px rgba(255, 255, 255, 0.1);
+    
 }
